--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -42,3 +42,10 @@
 .projectNames {
   background-color: #f7f7f7;
 }
+:root {
+  --image-contrast: 100%;
+  --image-brightness: 100%;
+  --image-sepia: 0%;
+  --image-hue-rotate: 0deg;
+  --image-invert: 0%;
+}
