--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -49,3 +49,11 @@
 .projectNames {
   background-color: #f7f7f7;
 }
+
+:root {
+  --image-contrast: 100%;
+  --image-brightness: 100%;
+  --image-sepia: 0%;
+  --image-hue-rotate: 0deg;
+  --image-invert: 0%;
+}
